[package]
name = "kernel"
version = "0.1.0"
authors = ["Andre Richter <andre.o.richter@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]

# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "5.x.x" }
