[package]
name = "kernel"
version = "0.1.0"
authors = ["Andre Richter <andre.o.richter@gmail.com>"]
edition = "2018"

# The features section is used to select the target board.
[features]
default = []
bsp_rpi3 = ["register"]
bsp_rpi4 = ["register"]

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]
qemu-exit = "1.x.x"
test-types = { path = "test-types" }

# Optional dependencies
register = { version = "1.x.x", features = ["no_std_unit_tests"], optional = true }

# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "5.x.x" }

##--------------------------------------------------------------------------------------------------
## Testing
##--------------------------------------------------------------------------------------------------

[dev-dependencies]
test-macros = { path = "test-macros" }

# Unit tests are done in the library part of the kernel.
[lib]
name = "libkernel"
test = true

# Disable unit tests for the kernel binary.
[[bin]]
name = "kernel"
test = false

# List of tests without harness.
[[test]]
name = "00_console_sanity"
harness = false

[[test]]
name = "02_exception_sync_page_fault"
harness = false
