[package]
name = "mingo"
version = "0.8.0"
authors = ["Andre Richter <andre.o.richter@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = ["register"]
bsp_rpi4 = ["register"]

[[bin]]
name = "kernel"
path = "src/main.rs"

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]

# Optional dependencies
register = { version = "1.x.x", optional = true }

# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "5.x.x" }

