[package]
name = "mingo"
version = "0.14.0"
authors = ["Andre Richter <andre.o.richter@gmail.com>"]
edition = "2021"

[features]
default = []
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = ["tock-registers"]
test_build = ["qemu-exit"]

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]
test-types = { path = "../libraries/test-types" }

# Optional dependencies
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true }
qemu-exit = { version = "3.x.x", optional = true }

# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "9.x.x" }

##--------------------------------------------------------------------------------------------------
## Testing
##--------------------------------------------------------------------------------------------------

[dev-dependencies]
test-macros = { path = "../libraries/test-macros" }

# Unit tests are done in the library part of the kernel.
[lib]
name = "libkernel"
test = true

# Disable unit tests for the kernel binary.
[[bin]]
name = "kernel"
path = "src/main.rs"
test = false

# List of tests without harness.
[[test]]
name = "00_console_sanity"
harness = false

[[test]]
name = "02_exception_sync_page_fault"
harness = false

[[test]]
name = "03_exception_restore_sanity"
harness = false
